@@ -1,3 +1,7 @@
+2019-05-15  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* coders/webp.c (RegisterWEBPImage): Reduce BSS size.
+
 2019-05-14  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* coders/jp2.c: Make more data const.
